--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -4,10 +4,10 @@ global:
   evaluation_interval: 15s
 alerting:
   alertmanagers:
-  - static_configs:
-    - targets: []
-    scheme: http
-    timeout: 10s
+    - static_configs:
+        - targets: []
+      scheme: http
+      timeout: 10s
 scrape_configs:
   - job_name: user-feedback
     honor_timestamps: true
@@ -15,4 +15,4 @@ scrape_configs:
     scrape_interval: 5s
     scheme: http
     static_configs:
-    - targets: ['host.docker.internal:8188']
+      - targets: ["host.docker.internal:8080"]
